service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scaterbrain-musicstore-service
spec:
  selector:
    app: scaterbrain-musicstore
  ports:
    - port: 8080
      targetPort: 8080
